--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,18 +1,21 @@
 TODO
- - IPv4 non-promiscuous (but with choice)
  - Protocols
-  - ARP
-   - ARP Probe
   - IP
    - Subnets
+    - Broadcast
+    - Routing
    - TTL
   - ICMP
+  - RIPv2
   - UDP
   - TCP
   - DHCP
   - SSH
   - [T]FTP
  - VLAN support
+ - ARP Probe
+ - MCIPoT
+ - Rail system
  - Settings per interface
  - Error checking
  - Members public/private
@@ -21,3 +24,6 @@ TODO
  - Clean up library API
   - Make different core protocol types more extensible
   - Implement filtering for incoming packets
+
+BUGS
+ - Queued IPv4 packets before ARP reply disappear
