--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -10,20 +10,26 @@ TODO
   - UDP
   - TCP
   - DHCP
-  - SSH
-  - [T]FTP
- - VLAN support
- - ARP Probe
- - MCIPoT
- - Rail system
- - Settings per interface
- - Error checking
- - Members public/private
- - Documentation
- - Decide if some superfluous header fields (lengths, checksums, etc) should be implemented for "correctness"
- - Clean up library API
-  - Make different core protocol types more extensible
-  - Implement filtering for incoming packets
+  - DNS
+  - ZURP (Zvarpensg Unified Request Protocol)
+  - Less Important Stuff
+   - SSH
+   - [T]FTP
+ - Other Features
+  - VLAN support
+  - ARP Probe
+  - MCIPoT (MCIP over Tesseract [or other item-transfer layer 1])
+  - Settings per interface
+  - Clean up and work on standardizing library API
+   - Make different core protocol types more extensible
+ - Implementations
+  - Rail system
+ - Code Cleanliness
+  - Error checking / exception handling
+  - Member access modifiers
+  - Documentation
+ - Decide if some superfluous header fields (lengths, checksums, etc) should be 
+   implemented for real-world accuracy.
 
 BUGS
- - Queued IPv4 packets before ARP reply disappear
+ - None right now! (that we know of)
